lib/vtzero_dart_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/vtzero_dart.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class VtzeroDartBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  VtzeroDartBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  VtzeroDartBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Tile operations
  ffi.Pointer<VtzTileHandle> vtz_tile_create(
    ffi.Pointer<ffi.Uint8> data,
    int length,
  ) {
    return _vtz_tile_create(data, length);
  }

  late final _vtz_tile_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<VtzTileHandle> Function(ffi.Pointer<ffi.Uint8>, ffi.Size)
        >
      >('vtz_tile_create');
  late final _vtz_tile_create = _vtz_tile_createPtr
      .asFunction<
        ffi.Pointer<VtzTileHandle> Function(ffi.Pointer<ffi.Uint8>, int)
      >();

  void vtz_tile_free(ffi.Pointer<VtzTileHandle> handle) {
    return _vtz_tile_free(handle);
  }

  late final _vtz_tile_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<VtzTileHandle>)>
      >('vtz_tile_free');
  late final _vtz_tile_free = _vtz_tile_freePtr
      .asFunction<void Function(ffi.Pointer<VtzTileHandle>)>();

  ffi.Pointer<VtzLayerHandle> vtz_tile_next_layer(
    ffi.Pointer<VtzTileHandle> tile_handle,
  ) {
    return _vtz_tile_next_layer(tile_handle);
  }

  late final _vtz_tile_next_layerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<VtzLayerHandle> Function(ffi.Pointer<VtzTileHandle>)
        >
      >('vtz_tile_next_layer');
  late final _vtz_tile_next_layer = _vtz_tile_next_layerPtr
      .asFunction<
        ffi.Pointer<VtzLayerHandle> Function(ffi.Pointer<VtzTileHandle>)
      >();

  ffi.Pointer<VtzLayerHandle> vtz_tile_get_layer_by_name(
    ffi.Pointer<VtzTileHandle> tile_handle,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _vtz_tile_get_layer_by_name(tile_handle, name);
  }

  late final _vtz_tile_get_layer_by_namePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<VtzLayerHandle> Function(
            ffi.Pointer<VtzTileHandle>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('vtz_tile_get_layer_by_name');
  late final _vtz_tile_get_layer_by_name = _vtz_tile_get_layer_by_namePtr
      .asFunction<
        ffi.Pointer<VtzLayerHandle> Function(
          ffi.Pointer<VtzTileHandle>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Layer operations
  void vtz_layer_free(ffi.Pointer<VtzLayerHandle> handle) {
    return _vtz_layer_free(handle);
  }

  late final _vtz_layer_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<VtzLayerHandle>)>
      >('vtz_layer_free');
  late final _vtz_layer_free = _vtz_layer_freePtr
      .asFunction<void Function(ffi.Pointer<VtzLayerHandle>)>();

  ffi.Pointer<ffi.Char> vtz_layer_name(
    ffi.Pointer<VtzLayerHandle> layer_handle,
  ) {
    return _vtz_layer_name(layer_handle);
  }

  late final _vtz_layer_namePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<VtzLayerHandle>)
        >
      >('vtz_layer_name');
  late final _vtz_layer_name = _vtz_layer_namePtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<VtzLayerHandle>)
      >();

  int vtz_layer_extent(ffi.Pointer<VtzLayerHandle> layer_handle) {
    return _vtz_layer_extent(layer_handle);
  }

  late final _vtz_layer_extentPtr =
      _lookup<
        ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<VtzLayerHandle>)>
      >('vtz_layer_extent');
  late final _vtz_layer_extent = _vtz_layer_extentPtr
      .asFunction<int Function(ffi.Pointer<VtzLayerHandle>)>();

  int vtz_layer_version(ffi.Pointer<VtzLayerHandle> layer_handle) {
    return _vtz_layer_version(layer_handle);
  }

  late final _vtz_layer_versionPtr =
      _lookup<
        ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<VtzLayerHandle>)>
      >('vtz_layer_version');
  late final _vtz_layer_version = _vtz_layer_versionPtr
      .asFunction<int Function(ffi.Pointer<VtzLayerHandle>)>();

  ffi.Pointer<VtzFeatureHandle> vtz_layer_next_feature(
    ffi.Pointer<VtzLayerHandle> layer_handle,
  ) {
    return _vtz_layer_next_feature(layer_handle);
  }

  late final _vtz_layer_next_featurePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<VtzFeatureHandle> Function(ffi.Pointer<VtzLayerHandle>)
        >
      >('vtz_layer_next_feature');
  late final _vtz_layer_next_feature = _vtz_layer_next_featurePtr
      .asFunction<
        ffi.Pointer<VtzFeatureHandle> Function(ffi.Pointer<VtzLayerHandle>)
      >();

  /// Feature operations
  void vtz_feature_free(ffi.Pointer<VtzFeatureHandle> handle) {
    return _vtz_feature_free(handle);
  }

  late final _vtz_feature_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<VtzFeatureHandle>)>
      >('vtz_feature_free');
  late final _vtz_feature_free = _vtz_feature_freePtr
      .asFunction<void Function(ffi.Pointer<VtzFeatureHandle>)>();

  int vtz_feature_geometry_type(ffi.Pointer<VtzFeatureHandle> feature_handle) {
    return _vtz_feature_geometry_type(feature_handle);
  }

  late final _vtz_feature_geometry_typePtr =
      _lookup<
        ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<VtzFeatureHandle>)>
      >('vtz_feature_geometry_type');
  late final _vtz_feature_geometry_type = _vtz_feature_geometry_typePtr
      .asFunction<int Function(ffi.Pointer<VtzFeatureHandle>)>();

  bool vtz_feature_has_id(ffi.Pointer<VtzFeatureHandle> feature_handle) {
    return _vtz_feature_has_id(feature_handle);
  }

  late final _vtz_feature_has_idPtr =
      _lookup<
        ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<VtzFeatureHandle>)>
      >('vtz_feature_has_id');
  late final _vtz_feature_has_id = _vtz_feature_has_idPtr
      .asFunction<bool Function(ffi.Pointer<VtzFeatureHandle>)>();

  int vtz_feature_id(ffi.Pointer<VtzFeatureHandle> feature_handle) {
    return _vtz_feature_id(feature_handle);
  }

  late final _vtz_feature_idPtr =
      _lookup<
        ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<VtzFeatureHandle>)>
      >('vtz_feature_id');
  late final _vtz_feature_id = _vtz_feature_idPtr
      .asFunction<int Function(ffi.Pointer<VtzFeatureHandle>)>();

  void vtz_feature_for_each_property(
    ffi.Pointer<VtzFeatureHandle> feature_handle,
    PropertyCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _vtz_feature_for_each_property(feature_handle, callback, user_data);
  }

  late final _vtz_feature_for_each_propertyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<VtzFeatureHandle>,
            PropertyCallback,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('vtz_feature_for_each_property');
  late final _vtz_feature_for_each_property = _vtz_feature_for_each_propertyPtr
      .asFunction<
        void Function(
          ffi.Pointer<VtzFeatureHandle>,
          PropertyCallback,
          ffi.Pointer<ffi.Void>,
        )
      >();

  int vtz_feature_decode_geometry(
    ffi.Pointer<VtzFeatureHandle> feature_handle,
    GeometryCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _vtz_feature_decode_geometry(feature_handle, callback, user_data);
  }

  late final _vtz_feature_decode_geometryPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<VtzFeatureHandle>,
            GeometryCallback,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('vtz_feature_decode_geometry');
  late final _vtz_feature_decode_geometry = _vtz_feature_decode_geometryPtr
      .asFunction<
        int Function(
          ffi.Pointer<VtzFeatureHandle>,
          GeometryCallback,
          ffi.Pointer<ffi.Void>,
        )
      >();

  void vtz_feature_to_geojson(
    ffi.Pointer<VtzFeatureHandle> feature_handle,
    int extent,
    int tile_x,
    int tile_y,
    int tile_z,
    GeoJsonCallback callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _vtz_feature_to_geojson(
      feature_handle,
      extent,
      tile_x,
      tile_y,
      tile_z,
      callback,
      user_data,
    );
  }

  late final _vtz_feature_to_geojsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<VtzFeatureHandle>,
            ffi.Uint32,
            ffi.Int32,
            ffi.Int32,
            ffi.Uint32,
            GeoJsonCallback,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('vtz_feature_to_geojson');
  late final _vtz_feature_to_geojson = _vtz_feature_to_geojsonPtr
      .asFunction<
        void Function(
          ffi.Pointer<VtzFeatureHandle>,
          int,
          int,
          int,
          int,
          GeoJsonCallback,
          ffi.Pointer<ffi.Void>,
        )
      >();
}

final class VtzTileHandle extends ffi.Opaque {}

final class VtzLayerHandle extends ffi.Opaque {}

final class VtzFeatureHandle extends ffi.Opaque {}

/// Property iteration callback
typedef PropertyCallback =
    ffi.Pointer<ffi.NativeFunction<PropertyCallbackFunction>>;
typedef PropertyCallbackFunction =
    ffi.Void Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<ffi.Char> key,
      ffi.Int32 value_type,
      ffi.Pointer<ffi.Char> string_value,
      ffi.Double double_value,
      ffi.Int64 int_value,
      ffi.Uint64 uint_value,
      ffi.Bool bool_value,
    );
typedef DartPropertyCallbackFunction =
    void Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<ffi.Char> key,
      int value_type,
      ffi.Pointer<ffi.Char> string_value,
      double double_value,
      int int_value,
      int uint_value,
      bool bool_value,
    );

/// Geometry decoding callback
typedef GeometryCallback =
    ffi.Pointer<ffi.NativeFunction<GeometryCallbackFunction>>;
typedef GeometryCallbackFunction =
    ffi.Void Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Uint32 command,
      ffi.Int32 x,
      ffi.Int32 y,
    );
typedef DartGeometryCallbackFunction =
    void Function(ffi.Pointer<ffi.Void> user_data, int command, int x, int y);

/// GeoJSON projection callback
/// ring_type: 0=begin_ring, 1=point, 2=end_ring
typedef GeoJsonCallback =
    ffi.Pointer<ffi.NativeFunction<GeoJsonCallbackFunction>>;
typedef GeoJsonCallbackFunction =
    ffi.Void Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Uint32 ring_type,
      ffi.Double lon,
      ffi.Double lat,
    );
typedef DartGeoJsonCallbackFunction =
    void Function(
      ffi.Pointer<ffi.Void> user_data,
      int ring_type,
      double lon,
      double lat,
    );
